[package]
name = "tstool"
version = "0.1.0"
authors = ["Norbert Melzer <timmelzer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tstool"
path = "src/main.rs"

[[bin]]
name = "datacheck"
path = "src/bin/datacheck.rs"

[dependencies]
lazy_static = "1.4.0"

slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"

rocket = "^0.4.5"
rocket_contrib = { version = "^0.4.5", default-features = false, features = ["tera_templates"] }

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.14"

diesel = { version = "1.4.4", features = ["sqlite"] }